kubernetes/networking/virtual-services/vs-score-api.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: score-api-vs
  namespace: istio-system
spec:
  hosts:
  - "score-api.score-api.com.br"
  gateways:
  - gateway
  http:
  - route:
    - destination:
        host: score-api.score-api.svc.cluster.local 
        port:
          number: 80
